--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<h1>Git</h1>
 		<h2>Trabalhando em equipe com controle e seguranca</h2>
         <p>Teste de commit</p>
+        <p>Teste de commit 2</p>
 		
 		<ul>
 			<li>Fazer backup do seu projeto nao e o bastante para desfazer 
